--- a/paginaAlex.html
+++ b/paginaAlex.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Soy la pagina alex</h1>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta, voluptatem eius. Nam et deleniti temporibus vitae, impedit dolorem consectetur? Dolores ea illum repellendus? Vel, velit dolores! Repellendus, officia. Ex, aut.</p>
 </body>
 </html>
